[package]
name = "nudge"
version = "1.0.0"
edition = "2021"
authors = ["6543"]
license = "MIT"
description = "ADHD-friendly self-nudge timer for Wayland — flashes red overlay on interval, locks screen when done"
repository = "https://github.com/6543/nudge"
readme = "README.md"
keywords = ["timer", "wayland", "adhd", "pomodoro", "hyprland"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
iced = { version = "0.13", features = ["tokio", "advanced"] }
iced_layershell = "0.19"
signal-hook = "0.4"
thiserror = "2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
